# robocrisp

./: .gitignore  CMakeLists.txt  README.md
cmake/: Platform.cmake  RoboCRISPConfig.cmake
core/: Buffer.hh  DataDeclaration.hh  DataDeclarationBase.hh  SArray.hh  SharedQueue.hh  checksum.cc  checksum.hh  common.hh  config.h
data-structures/: DataField.hh  DataFieldBase.hh  DataStructure.cc
data-structures/static-types/: Configuration.cc  DataValue.hh  Handshake.hh  Message.cc  Message.hh  MessageDispatcher.hh  MessageDispatcher.tcc  Module.cc  Module.hh  ModuleControl.cc  ModuleControl.hh  ModuleInput.cc  ProtocolNode.tcc  Sensor.cc  Sensor.hh  decl-defn-macros.hh
doc/: Bootstrap.md  Doxyfile  ProtocolOverview.md  StructureSupport.md
include/crisp/comms/: APIElement.hh  BasicNode.hh  Buffer.hh  Configuration.hh  DataDeclaration.hh  DataDeclarationBase.hh  DataField.hh  DataFieldBase.hh  DataStructure.hh  DataValue.hh  Error.hh  Handshake.hh  Message.hh  MessageDispatcher.hh  MessageHandler.hh  Module.hh  ModuleControl.hh  ModuleInput.hh  NodeServer.hh  ProtocolNode.hh  ProtocolNode.tcc  Sensor.hh  common.hh  config.h  decl-defn-macros.hh
include/crisp/comms/bits/: BasicNode.tcc  MessageDispatcher.tcc  NodeServer.tcc  ProtocolNode.tcc
include/crisp/input/: Axis.hh  Button.hh  Controller.hh  EvDevController.hh  MappedEventSource.hh  MultiplexController.hh
include/crisp/util/: AVR.hh  ArrayAccessor.hh  Buffer.hh  PeriodicAction.hh  PeriodicScheduleSlot.hh  PeriodicScheduler.hh  RefCountedObject.hh  SArray.hh  ScheduledAction.hh  Scheduler.hh  SharedQueue.hh  Signal.hh  SignalAction.hh  StaticArray.hh  WorkerObject.hh  arith.hh  checksum.hh
include/crisp/util/bits/: PeriodicScheduleSlot.tcc  Signal.tcc  SignalAction.tcc
src/: CMakeLists.txt
src/comms/: APIElement.cc  BasicNode.cc  Buffer.cc  Configuration.cc  DataDeclaration.cc  DataStructure.cc  DataValue.cc  Handshake.cc  Message.cc  Module.cc  ModuleControl.cc  ModuleInput.cc  NodeServer.cc  Sensor.cc
src/input/: Axis.cc  Button.cc  Controller.cc  EvDevController.cc  MultiplexController.cc
src/util/: Buffer.cc  PeriodicAction.cc  PeriodicScheduleSlot.cc  PeriodicScheduler.cc  RefCountedObject.cc  ScheduledAction.cc  Scheduler.cc  WorkerObject.cc  checksum.cc
tests/: CMakeLists.txt  controller-test.cc  coroutines.cc  dispatcher-test.cc  live-test.cc  periodic-test.cc  signal-test.cc  structure-test.cc  transcoder-test.cc
tools/: crisp-bootstrap.uuid
tools/lib/crisp/bootstrap/: bluetooth-transport  unix-transport
tools/lib/crisp/python/crisp/: __init__.py
tools/lib/crisp/python/crisp/util/: __init__.py  option.py
tools/lib/crisp/ruby/: crisp.rb
tools/lib/crisp/ruby/crisp/: bootstrap.rb
tools/lib/crisp/ruby/crisp/bootstrap/: Configuration.rb  Parameter.rb  Program.rb  ProgramInvocationInfo.rb  proxy-metadata.rb
tools/lib/crisp/ruby/crisp/util/: Option.rb
tools/lib/ruby/crisp/: bootstrap.rb
tools/lib/ruby/crisp/bootstrap/: Configuration.rb  Parameter.rb  ProcessInfo.rb  Program.rb
tools/lib/ruby/crisp/util/: Option.rb
tools/share/crisp/: crisp-bootstrap.service
